did some dummy refactoring in configs, need more of it